Tablolar olusturuldu banner

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=sql-relations
 spring.datasource.url=jdbc:postgresql://localhost:5432/hastane
 spring.datasource.username=postgres
-spring.datasource.password=*
+spring.datasource.password=122436Sem
